deployment.d/rest_api_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whiteboard-editor-rest-api
  namespace: whiteboard-editor
  labels:
    app: whiteboard-editor.rest-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whiteboard-editor-rest-api
  template:
    metadata:
      labels:
        app: whiteboard-editor-rest-api
    spec:
      containers:
      - name: whiteboard-editor-rest-api
        image: ${WHITEBOARD_EDITOR_CR_URI}/rest_api:${WHITEBOARD_EDITOR_TAG}
        imagePullPolicy: Never
        ports:
          - containerPort: 3000
