deployment.d/web_socket_server_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whiteboard-editor-web-socket-server
  namespace: whiteboard-editor
  labels:
    app: whiteboard-editor.web-socket-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whiteboard-editor.web-socket-server
  template:
    metadata:
      labels:
        app: whiteboard-editor.web-socket-server
    spec:
      containers:
      - name: whiteboard-editor-web-socket-server
        image: ${WHITEBOARD_EDITOR_CR_URI}/web_socket_server:${WHITEBOARD_EDITOR_TAG}
        imagePullPolicy: Never
        ports:
          - containerPort: 3000
