deployment.d/frontend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: whiteboard-editor
spec:
  selector:
    app: whiteboard-editor.frontend
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
