deployment.d/rest_api_service.yml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-service
spec:
  selector:
    app: whiteboard-editor-rest-api
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
