deployment.d/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: whiteboard-editor
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
        - kind: Secret
          group: ""
          name: cert-default
          namespace: whiteboard-editor
    allowedRoutes:
      namespaces:
        from: Same
  - name: smtp
    protocol: TCP
    port: 25
    allowedRoutes:
      namespaces:
        from: Same
  - name: esmtp-implicit-tls
    protocol: TLS
    port: 465
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
        - kind: TLSRoute
  - name: esmtp-explicit-tls
    protocol: TCP
    port: 587
    allowedRoutes:
      namespaces:
        from: Same
  - name: imaps
    protocol: TLS
    port: 993
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
        - kind: TLSRoute
    tls:
      mode: Passthrough
